crates/es-fluent-manager-macros/src/snapshots/es_fluent_manager_macros__bevy_fluent_text__tests__generate_refresh_for_locale_impl_struct.snap
---
source: crates/es-fluent-manager-macros/src/bevy_fluent_text.rs
expression: pretty_tokens(struct_tokens)
---
impl ::es_fluent_manager_bevy::RefreshForLocale for ExampleStruct {
    fn refresh_for_locale(
        &mut self,
        lang: &::es_fluent_manager_bevy::unic_langid::LanguageIdentifier,
    ) {
        fn __es_fluent_assert_locale_try_from<
            __EsFluentLocale: for<'__es_fluent_locale> ::std::convert::TryFrom<
                    &'__es_fluent_locale ::es_fluent_manager_bevy::unic_langid::LanguageIdentifier,
                >,
        >() {}
        __es_fluent_assert_locale_try_from::<Lang>();
        if let Ok(value) = ::std::convert::TryFrom::try_from(lang) {
            self.locale = value;
        }
    }
}
