crates/es-fluent-manager-macros/src/snapshots/es_fluent_manager_macros__bevy_fluent_text__tests__locale_field_collection_rejects_tuple_struct_fields.snap
---
source: crates/es-fluent-manager-macros/src/bevy_fluent_text.rs
expression: tuple_struct_err.to_string()
---
Attribute error in locale field: `#[locale]` cannot be used on tuple struct fields
help: move #[locale] to a named struct field or named enum variant field
